# psycor

./: LICENSE  README.md  pyproject.toml
psycor/: main.py
psycor/commands/: add.py  create.py  init.py  install.py  venv.py
psycor/commands/template/: __init__.py  save.py
psycor/templates/fastapi/: psycor.toml
psycor/templates/flask/: psycor.toml
psycor/templates/python/: psycor.toml
