[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psycor"
version = "0.1.0"
description = "Herramienta CLI para scaffolding de proyectos Python"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Adrian Obregon"}
]

dependencies = [
  "click",
  "tomli-w",
]

[project.scripts]
psycor = "psycor.main:psycor"